# Python-project

./: Projet github.py  Python_project.ipynb  README.md  gui.py  interface.py  logic.py  pyproject.toml  requirements.txt
.github/workflows/: manual.yml  python-app.yml
Source/: Code_Originel  interface.py  library.py  main.py  traits.py
Test/: Test1.py  test_create_interface.py  test_interface.py  test_module1.py  test_traits.py
