[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dog_breed_suggester"
version = "0.1.0"
description = "A Python app to suggest dog breeds based on traits."
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = ["tk"]
