[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "votre_super_lib"
version = "0.1.0"
description = "Une librairie pour trouver la race de chien idéale"
authors1 = [{name = "DELAFOSSE Eloi", email = "eloi.delafosse@estaca.eu"}]
authors2 = [{name = "LE BOUFFANT Tanguy", email = "tanguy.lebouffant@estaca.eu"}]
license = {text = "MIT"}
dependencies = [
    "tkinter"
]